# second_brain

./: .gitignore  CLAUDE.md  README.md  companion.py  heartbeat.py  old_companion.py  rag.py  railway.toml  requirements.txt  research_agent.py  research_pipeline.py
jarvis/: .env.example  gen_icons.py  package-lock.json  package.json  tailwind.config.js
jarvis/src/: App.tsx  index.css  store.ts  types.ts
jarvis/src-tauri/: Cargo.toml  tauri.conf.json
jarvis/src-tauri/capabilities/: default.json
jarvis/src-tauri/src/: lib.rs  main.rs
jarvis/src-tauri/src/commands/: claude.rs  gemini_live.rs  gemini_tts.rs  groq.rs  memory.rs  mod.rs  screen.rs  tts.rs  widgets.rs  window.rs
memory/: COMMANDS.md  agenda.md  jarvis_style.md  last_consolidation.json  memory.md  memory_archive.md  soul.md  staging.json  staging.md  taches.md  user.md
memory/calibration_jarvis/: notebooklm_output.md
memory/concepts/: bourdieu-capitaux.md  bourdieu-habitus.md  fable-5-anthropic-capacites.md  fable-5-anthropic.md  openclaw-hermes-possibilites.md  paradoxe-de-fermi.md  positionnement-compagnon-ia.md  recherche-rag.md
memory/embeddings/: index.db
memory/idees/: ameliorer-classification-intentions-trop.md  effacer-modifier-des-parties-des-fichier.md  explorer-autres-concepts-bourdieu-champ.md  faire-un-podcast-sur-les-elephants.md  faire-un-site-journalistique.md  faire-une-video-top-5-en-se-deshabillant.md  integration-de-jarvis-sur-mac-pour-alice.md  integration-google-calendar-pour-synchro.md  monitoring-consommation-api-tokens.md  panirath-vit-a-arkinath-ville-frontiere.md  podcast-ia.md
memory/logs/: costs.jsonl
memory/perso/: contexte-professionnel.md  incidents-facturation.md  journal-emotionnel.md  journal-reves.md  (+2 more)
(+17 files in other folders)
