[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jarvis"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2" }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart        = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio       = { version = "1", features = ["full"] }
dotenvy      = "0.15"
futures-util      = "0.3"
chrono            = { version = "0.4", features = ["clock"] }
base64            = "0.22"
screenshots       = "0.8"
image             = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
] }
